First Pass: Content Structuring Finished

--- a/index.html
+++ b/index.html
@@ -121,17 +121,71 @@
             </section>
             <section class="work">
                 <div class="container">
-
+                    <h2>Our Work</h2>
+                    <img src="assets/images/work-image1.jpg" alt="">
+                    <img src="assets/images/work-image2.jpg" alt="">
+                    <img src="assets/images/work-image3.jpg" alt="">
+                    <img src="assets/images/work-image4.jpg" alt="">
                 </div>
             </section>
             <section class="contact">
                 <div class="container">
-
+                    <h2>Contact Us</h2>
+                    <form action="">
+                        <input type="text" value="Full Name" placeholder="Full Name">
+                        <input type="text" value="Your Email" placeholder="Your Email">
+                        <input type="text" value="Your Phone" placeholder="Your Phone">
+                        <input type="text" value="Budget Level" placeholder="Budget Level">
+                        <textarea name="" id="" cols="30" rows="10" placeholder="Your requirements"></textarea>
+                        <input type="submit" value="Send Message">
+                    </form>
+                    <p id="map">Google Map location</p>
                 </div>
             </section>
         </article>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="container">
+
+            <section class="footer-section-top">
+                <section class="footer-sections">
+                    <h2>Hydro Company</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt nisi iusto possimus veritatis? Facere, incidunt!</p>
+                </section>
+                <section class="footer-sections">
+                    <h2>Company</h2>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </section>
+                <section class="footer-sections">
+                    <h2>Services</h2>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </section>
+                <section class="footer-sections">
+                    <h2>Find Us</h2>
+                    <p>Address</p>
+                </section>
+            </section>
+            <hr>
+            <section class="footer-section-bottom">
+                <p>Copyright &#x00A9;2017 Your Company</p>
+                <p>Call Us (+66) 010-020-0340</p>
+                <ul>
+                    <li>fb</li>
+                    <li>tw</li>
+                    <li>ig</li>
+                </ul>
+            </section>
+        </div>
+    </footer>
 <!-- Font Awesome Script Begin -->
 <script src="https://kit.fontawesome.com/43da756c39.js" crossorigin="anonymous"></script>
 <!-- Font Awesome Script End -->
